orgs/claim-estimator/force-app/main/default/objects/Estimate_Request__c/Estimate_Request__c.object-meta.xml
<CustomObject>
    <label>Estimate Request</label>
    <pluralLabel>Estimate Requests</pluralLabel>
    <description>Stores all inbound estimation requests received by the claim-estimator org from the MCP Gateway. Each record represents one estimation request from the core org.</description>
    <nameField>
        <label>Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>REQ-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>