orgs/claim-estimator/force-app/main/default/objects/Estimate_Request__c/fields/Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Id__c</fullName>
    <label>Claim Id</label>
    <description>The Salesforce Record ID of the originating Claim from the core org</description>
    <inlineHelpText>Enter the 18-character Salesforce Record ID of the claim from the core org</inlineHelpText>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
</CustomField>