orgs/claim-estimator/force-app/main/default/objects/Estimate_Request__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <description>Type of vehicle insurance claim being estimated</description>
    <inlineHelpText>Select the type of insurance claim for this estimation request</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Windscreen</fullName>
            </value>
            <value>
                <fullName>Natural_Disaster</fullName>
                <label>Natural Disaster</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>