orgs/claim-estimator/force-app/main/default/objects/Estimate_Request__c/fields/Damage_Level__c.field-meta.xml
<CustomField>
    <fullName>Damage_Level__c</fullName>
    <label>Damage Level</label>
    <description>Severity of the damage</description>
    <inlineHelpText>Select the severity level of the damage to assess repair or replacement needs</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Total Loss</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>