orgs/claim-estimator/force-app/main/default/objects/Estimate_Request__c/fields/Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>Incident_Description__c</fullName>
    <label>Incident Description</label>
    <description>Full description of the incident as provided by the customer</description>
    <inlineHelpText>Enter a detailed description of the incident including what happened, when, and any relevant circumstances</inlineHelpText>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>