orgs/claim-estimator/force-app/main/default/objects/Estimate_Request__c/fields/Request_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_Timestamp__c</fullName>
    <label>Request Timestamp</label>
    <description>The exact date and time this estimation request was received</description>
    <inlineHelpText>Records when the estimation request was received by the claim-estimator org</inlineHelpText>
    <type>DateTime</type>
</CustomField>