orgs/claim-estimator/force-app/main/default/objects/Estimate_Request__c/fields/Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Source_Org__c</fullName>
    <label>Source Org</label>
    <description>The name or ID of the originating Salesforce org that sent this request</description>
    <inlineHelpText>Enter the org ID or name of the Salesforce org that originated this estimation request</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>